--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=JetBrains+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/style.css">
     <title>Portfólio</title>
 </head>
@@ -44,7 +47,7 @@
 
         <section id="sobre" class="sobreMim">
         <h2 class="subtitulo">Sobre Mim</h2>
-        <p>Comecei na área de tecnologia em 2022 e desde então venho estudando temas diversos como IA, ciência da computação, RA, entre outros. Em geral, gosto de aprender coisas novas e estou sempre em buscar de melhorar minhas habilidades. Atuo como desenvolvedora web e tradutora de inglês freelancer.</p>
+        <p class="texto">Comecei na área de tecnologia em 2022 e desde então venho estudando temas diversos como IA, ciência da computação, RA, entre outros. Em geral, gosto de aprender coisas novas e estou sempre em buscar de melhorar minhas habilidades. Atuo como desenvolvedora web e tradutora de inglês freelancer.</p>
         </section>
 
         <section id="skills" class="habilidades">
@@ -61,13 +64,24 @@
 
         <section id="hobbies" class="atividades">
         <h2 class="subtitulo">Hobbies</h2>
-        <p>Estudo idiomas por conta própria, especificamente inglês e coreano. Também sou apaixonada por jogos e costumo assistir gameplays no youtube ou na twitch. </p>
+        <p class="texto">Estudo idiomas por conta própria, especificamente inglês e coreano. Também sou apaixonada por jogos e costumo assistir gameplays no youtube ou na twitch.</p>
         <!-- separar aqui -->
         </section>
 
-        <section>
-        <h2 class="contato">Contato</h2>
-        <p>Se interessou pelo meu trabalho? Entre em contato comigo pelo formulário abaixo ou pelas minhas redes.</p>
+        <section id="formacao" class="educacao">
+        <h2 class="subtitulo">Formação acadêmica</h2>
+        <img id="logoAlura" src="./src/img/image 8.png" alt="logo da alura">
+        <p>Formação Front-End</p>
+        <span>Em andamento</span>
+        </section>
+
+        <section id="projetos" class="experiencia">
+        <h2 class="subtitulo">Experiência profissional</h2>
+        </section>
+
+        <section id="contato" class="formulario">
+        <h2 class="subtitulo">Contato</h2>
+        <p class="texto">Se interessou pelo meu trabalho? Entre em contato comigo pelo formulário abaixo ou pelas minhas redes.</p>
         <form action="">
         <label for="nome">Nome</label>
         <input type="text" name="nome" id="nome">
