aviso sobre o form adicionado

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <section id="contato" class="secaoForm">
         <h2 class="subtitulo">Contato</h2>
         <p class="texto">Se interessou pelo meu trabalho? Entre em contato comigo pelo formulário abaixo ou pelas minhas redes.</p>
+        <span style="color: red;">formulário ainda não funcional, apenas ilustrativo</span>
         <form class="formulario">
         <fieldset class="formulario_campo">
         <label for="nome">Nome</label>
@@ -112,9 +113,10 @@
         <fieldset class="formulario_campo">
         <label for="mensagem">Mensagem</label>
         <textarea name="mensagem" id="mensagem" cols="30" rows="10" required></textarea>
-        <input type="submit" value="Enviar Mensagem" maxlength="300">
         <span class="mensagem-erro"></span>
         </fieldset>
+        <input type="submit" value="Enviar" maxlength="300">
+
         </form>
         </section>
 
